# hosting_api

./: .env  Cargo.toml  Dockerfile  docker-compose.yaml
entity/: Cargo.toml
entity/src/: applications.rs  mod.rs  prelude.rs  servers.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20230828_171934_create_servers.rs  m20230828_180153_create_applications.rs
src/: main.rs
src/routes/: application.rs  applications.rs  image.rs  images.rs  mod.rs  server.rs  servers.rs
src/types/: mod.rs
