[package]
name = "hosting_api"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
ulid = { version = "1.0.0", features = ["serde"] }
hosting_types = { path = "../hosting_types", version = "*" }
reqwest = { version = "0.11.14", features = ["json"] }
bollard = "0.14.0"
actix-web = "4.3.0"
serde = "1.0.152"
serde_json = "1.0.93"
actix-cors = "0.6.4"
env_logger = "0.10.0"
log = "0.4.17"
sea-orm = { version = "0.12", features = ["sqlx-mysql", "runtime-tokio-native-tls", "macros", "with-json"] }
