[package]
name = "hosting_api"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
ulid = { version = "1.2", features = ["serde"] }
hosting_types = { git = "https://github.com/The-Poss-Panel/hosting_types.git" }
reqwest = { version = "0.12", features = ["json"] }
bollard = "0.19"
actix-web = "4.11"
serde = "1.0"
serde_json = "1.0"
actix-cors = "0.7"
env_logger = "0.11"
log = "0.4"
sea-orm = { version = "1.1", features = ["sqlx-mysql", "runtime-tokio-native-tls", "macros", "with-json"] }
futures-util = "0.3"
